# agent-driver

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .runtime_store.sqlite3  .runtime_store.sqlite3-shm  .runtime_store.sqlite3-wal  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.ru.md  pyproject.toml
.uv-bootstrap/: pyvenv.cfg
agent_driver/: __init__.py  agent-driver.code-workspace  registry.py
docs/: README.md  a2a.md  acp-deepening-plan-2026-06-10.md  acp.md  add-notes.md  agent-driver-analysis-2026-05-18.md  agent-driver-refactoring-plan-2026-05-31.md  builtin-tools.md  chat-demo-compaction-notification-plan-2026-05-30.md  chat-demo-design-improvement-plan-2026-05-29.md  chat-demo-markdown-citations-plan-2026-05-30.md  chat-demo.md  deep-research-and-skills-analysis-2026-05-31.md  deep-research-live-hardening-plan-2026-05-31.md  efficient-deep-research-workspace-architecture-2026-05-31.md  embedding.md  extending.md  gap-analysis-and-plan-2026-06-09.md  improvement-plan-e1-e8-2026-06-09.md  mcp-http.md  node-contract.md  openclaude-improvement-plan-2026-05-29.md  planning-and-control.md  platform-adapters-plan-2026-06-10.md  provider-model-debugging.md  python-sandbox-design-2026-06-04.md  python-sandbox-experiment.md  refactoring-plan-2026-06-10.md  research-provider-quality-architecture-plan-2026-05-31.md  research-quality-improvement-plan-2026-05-31.md  review-cycle-2-2026-06-09.md  roadmap.md  runtime-metadata.md  runtime.md  sdk-errors.md  sdk-quality-deep-analysis-2026-05-31.md  sdk-refactor-and-review-cycle-3-2026-06-09.md  sdk-sessions.md  sdk-streaming.md  sdk-tools.md  (+5 more)
examples/chat-demo/backend/: pyproject.toml  snake_game.py
examples/chat-demo/backend/app/: __init__.py  config.py  deps.py  main.py  observability.py  run_cancel.py  sse_relay.py  workspace.py
examples/chat-demo/backend/app/api/: __init__.py  chat.py  health.py  models.py  providers.py  sessions.py  skills.py  tools.py  workspace.py
examples/chat-demo/backend/app/schemas/: __init__.py  chat.py  meta.py  sessions.py  skills.py
examples/chat-demo/backend/app/services/: __init__.py  agent_factory.py  fake_scenarios.py  message_metadata.py  run_trace_summary.py
examples/chat-demo/backend/tests/: conftest.py  test_cancel.py  test_chat_deep_research_sse.py  test_chat_failure_message.py  test_chat_messages_sse.py  test_chat_multi_turn_session.py  test_chat_persists_transcript.py  test_chat_workspace_integration.py  test_control.py  test_health.py  test_message_metadata.py  test_models.py  test_observability.py  test_providers.py  test_replay.py  test_resume.py  test_run_trace_summary.py  test_sessions.py  test_skills.py  test_tools.py  test_workspace.py
scripts/: check_agent_by_eyes.py  check_package_layout.py  deep_research_live_matrix.py  deep_research_trace_audit.py  eval_aggregate.py  eval_diff.py  eval_sandbox_audit.py  eval_trace_inspect.py  export_phoenix_evidence.py  (+3 more)
(+1025 files in other folders)
