[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-driver"
version = "0.1.0"
description = "Domain-neutral runtime contracts for agentic applications."
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "pydantic>=2.7.0",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
  "black>=26.0.0",
  "isort>=8.0.0",
  "pylint>=4.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-xdist>=3.6.0",
  "playwright>=1.48.0",
]
postgres = [
  "psycopg[binary]>=3.2.0",
]
cli = [
  "prompt_toolkit>=3.0.43",
  "rich>=13.0.0",
]
instructor = [
  "instructor>=1.7.0",
]
acp = [
  "agent-client-protocol>=0.10.0",
]
server = [
  "starlette>=0.40.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agent-driver = "agent_driver.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_driver*"]

[tool.setuptools.package-data]
"agent_driver" = ["py.typed"]
"agent_driver.prompts.templates" = ["*.txt"]
"agent_driver.skills.curated" = ["*/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Default sweep excludes live (network-bound) and slow (subprocess /
# scientific stack import) tests. Override with `-m slow` or
# `-m "slow or not slow"` to include them. Opt-in parallel: `-n auto`
# (requires pytest-xdist from the dev extra).
addopts = "-q -m 'not live and not slow'"
markers = [
  "live: optional network/provider checks disabled by default",
  "slow: subprocess- or scientific-stack-bound tests; excluded from default sweep",
]

[tool.setuptools]
script-files = ["scripts/check_package_layout.py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.main]
py-version = "3.11"
jobs = 0
recursive = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
  "duplicate-code",
  "fixme",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-locals",
]
